updated db indexing
